[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/Modeseven.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -191.0
margin_right = 139.0
margin_bottom = 185.0
color = Color( 0.133333, 0.12549, 0.203922, 1 )

[node name="Resume" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -100.0
margin_right = 85.0
margin_bottom = -31.0
focus_neighbour_bottom = NodePath("../Restart")
focus_next = NodePath("../Restart")
focus_previous = NodePath("../Exit")
text = "Resume"

[node name="Restart" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -10.0
margin_right = 83.5
margin_bottom = 59.0

[node name="Exit" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = 80.0
margin_right = 83.5
margin_bottom = 149.0
text = "Exit"

[node name="MenuTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 130.0
margin_right = 97.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.764706, 0.603922, 1 )
text = "Paused"
align = 1
valign = 1
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
